<resources>
    <string name="app_name">RediExpress</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="signup">Sign Up</string>
    <string name="signin">Sign In</string>
    <string name="have_account">Already have an account?</string>
    <string name="different_m">Different modes of payment either before and after delivery without stress</string>
</resources>